--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -3,7 +3,7 @@
 html{
     box-sizing: border-box;
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 28px;
 }
 
 
@@ -14,6 +14,24 @@ html{
     /* content: '';  */
     box-sizing: inherit;
     scroll-behavior: smooth;
+}
+
+p{
+    font-size: 22px;
+
+    width : 60%;
+    text-align:center;
+    margin: auto;
+    margin-top : 2rem;
+    margin-bottom : 2rem;
+
+    
+}
+
+.volver{
+    text-align: right;
+    padding-right: 2rem;
+
 }
 
 
